--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.main {
+/* .main {
   width: 100%;
   height: 100vh;
 }
@@ -28,4 +28,4 @@ video {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
-}
+} */
