--- a/src/pages/NavBar/Navigation.css
+++ b/src/pages/NavBar/Navigation.css
@@ -4,6 +4,10 @@
   transition: transform 1s ease-out;
 }
 
+nav {
+  background-color: aqua;
+}
+
 /* .navbar-container {
   display: flex;
   flex-direction: row;
